@@ -71,6 +71,10 @@ New Features
     This field type should only be used for sorting or as a value source
     in a FunctionQuery (ryan, hossman, yonik) 
 
+10. SOLR-266: Adding show=schema to LukeRequestHandler to show the parsed
+    schema fields and field types.  (ryan)
+
+
 Changes in runtime behavior
 
 Optimizations
